kustomize-rollout/overlays/stg/route-preview-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-tomcat-preview
spec:
  host: sample-tomcat-preview-stg.apps.rosa.akhino-modnize.6abk.p3.openshiftapps.com
